Add requirements files

--- a/.github/workflows/merge_tests.yml
+++ b/.github/workflows/merge_tests.yml
@@ -13,10 +13,10 @@ on:
     branches:
       - master
       - dev
-      - "0.4"
     paths:
       - "**.py"
       - "setup.cfg"
+      - "**.txt"
       - ".github/workflows/**.yml"
   workflow_dispatch:
     inputs:
